--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ certifi==2022.12.7
 charset-normalizer==3.0.1
 click==8.1.3
 colorama==0.4.6
+dnspython==2.3.0
+email-validator==1.3.1
 Flask==2.2.2
 Flask-Login==0.6.2
 Flask-Migrate==4.0.2
